deploy/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
    kanban-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
      - name: appserver
        image: martold/itmo:app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: "/opt/picDir"
            name: appserver-pvc
      volumes:
      - name: appserver-pvc
        persistentVolumeClaim:
          claimName: kanban-app-pvc
