deploy/db-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 
    kanban-app-postgres-sfs
spec:
  serviceName: kanban-app-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: kanban-app-postgres-sfs
  template:
    metadata:
      labels:
        app: kanban-app-postgres-sfs
    spec:
      containers:
       - name: postgres
         image: martold/itmo:db
         ports:
          - containerPort: 5432
         volumeMounts:
         - name: pvc-db-volume
           mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: pvc-db-volume
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1G
