deploy/kanban-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: kanban-app
  name: kanban-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kanban-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kanban-app
    spec:
      containers:
        - env:
            - name: DB_SERVER
              value: kanban-postgres
            - name: POSTGRES_DB
              value: kanban
            - name: POSTGRES_PASSWORD
              value: kanban
            - name: POSTGRES_USER
              value: kanban
          image: martold/itmo:4
          name: kanban-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
