deploy/kanban-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: kanban-postgres
  name: kanban-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kanban-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kanban-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: kanban
            - name: POSTGRES_PASSWORD
              value: kanban
            - name: POSTGRES_USER
              value: kanban
          image: postgres:9.6-alpine
          name: kanban-postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: kanban-data
      restartPolicy: Always
      volumes:
        - name: kanban-data
          persistentVolumeClaim:
            claimName: kanban-data
status: {}
