deploy/kanban-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: kanban-ui
  name: kanban-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kanban-ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kanban-ui
    spec:
      containers:
        - image: martold/itmo:9
          name: kanban-ui
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
