deploy/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
      - name: nginx
        image: martold/itmo:webui
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /css/style.css
            port: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: server-conf
          mountPath: /etc/nginx/conf.d/server.conf
          subPath: server.conf
      volumes:
      - name: nginx-conf
        configMap: 
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: server-conf
        configMap: 
          name: server-conf
          items:
            - key: server.conf
              path: server.conf
