deploy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app-apserver-service
spec:
  type: ClusterIP
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 8080
     targetPort: 8080
  selector:
    app: kanban-app-apserver
