deploy/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app-postgres-service
spec:
  type: ClusterIP
  ports:
   - name: "db-port"
     protocol: "TCP"
     port: 5432
     targetPort: 5432
  selector:
    app: kanban-app-postgres-sfs
