deploy/kanban-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: kanban-postgres
  name: kanban-postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: kanban-postgres
status:
  loadBalancer: {}
