deploy/kanban-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: kanban-ui
  name: kanban-ui
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: kanban-ui
status:
  loadBalancer: {}
