deploy/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app-nginx-service
spec:
  type: ClusterIP
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 80
  selector:
    app: kanban-app-nginx
