deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kanban-app-ingress
spec:
  rules:
  - host: 127.0.0.1
    http:
      paths:
      - path: /*
        backend:
          serviceName: kanban-app-nginx-np
          servicePort: 80
      - path: /v2/*
        backend:
          serviceName: web2
          servicePort: 8080
  backend:
    serviceName: kanban-app-nginx-np
    servicePort: 80
  tls:
  - hosts:
    - kanban-app.example.com
    secretName: tls-kanban-app
