deploy/kanban-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: kanban-ingress
spec:
  rules:
  - host: kanban-board.itmo.org
    http:
      paths:
      - path: /api
        backend:
          serviceName: kanban-app
          servicePort: 8080
      - path: /
        backend:
          serviceName: kanban-ui
          servicePort: 4200
